Updated JenkinsFile